# SP_aud_2024

./: CMakeLists.txt
aud1/: hello_world.cpp  test.cpp
aud10/: example.cpp  zad1.cpp  zad10.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
aud11/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp
aud12/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp
aud13-kolokviumski/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp
aud2/: simple_ex.cpp  zad1.cpp  zad2.cpp  zad3.cpp
aud3/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
aud4/: primeri.cpp  zad1.cpp  zad2.cpp  zad3.cpp
aud5/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
aud6/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp
aud7/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
